created dashboard files

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ PM_SANDBOX_ACCOUNT_ID=act_1CVUZpVhSTuVQj11Gb9iZQ
 PM_SIGNATURE_SECRET=8eb1cd6c-c80d-4cd3-976c-4216a6442ea2
 YELP_CLIENT_ID=RX-l2IUlRypwvwL0f7DCZw
 YELP_API_KEY=li5HkatbK6k2DiR5nQLEjRUbKTj_YH0uYQ3K5lfTH3xCcuUJN0legJK0uLLc_Wbrl2HEz8iB8N95Rw5exiclxvGMq_l5RJfyMoMzRyFfreIbi124zq3apbH_uV08X3Yx
+SECRET=BRUNCH.and.LUPPER 
